zb-java-ms-template/caas-config/microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      k8s-app: zb-java-ms-template
  name: zb-java-ms-template
  namespace: zb-jms-template
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: zb-java-ms-template
  type: LoadBalancer
